@@ -94,6 +94,10 @@ Let's render the form for the first time now:
                name="form.buttons.continue"
                class="submit-widget button-field" value="Continue"
                type="submit" />
+        <input id="form-buttons-clear"
+               name="form.buttons.clear"
+               class="submit-widget button-field" value="Clear"
+               type="submit" />
     </div>
     </form>
   </div>
@@ -150,6 +154,10 @@ Submit the first step successfully
                type="submit" />
         <input id="form-buttons-back" name="form.buttons.back"
                class="submit-widget button-field" value="Back"
+               type="submit" />
+        <input id="form-buttons-clear"
+               name="form.buttons.clear"
+               class="submit-widget button-field" value="Clear"
                type="submit" />
       </div>
     </form>
