@@ -4,6 +4,9 @@ Changelog
 1.4.1 (unreleased)
 ------------------
 
+* Add a Clear button that clears the session and goes back to step 1.
+  [elro]
+
 * Reorder buttons so Finish and Continue both appear before Back.
   [elro]
 
